# tinyws

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md
include/: tinyws.h
src/: tinyws.c
tests/: CMakeLists.txt  TEST.h  byte_masking.c  frame_creation.c
